<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:divider="@color/colorDivider"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="fill_vertical|fill_horizontal|center"
            android:layout_marginLeft="@dimen/imageViewLayoutMarginSize"
            android:layout_marginRight="@dimen/imageViewLayoutMarginSize"
            android:layout_marginTop="@dimen/imageViewLayoutMarginSize"
            android:contentDescription="@string/movie_poster_image_description" />

        <TextView
            android:id="@+id/original_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginTopSize"
            android:text="@string/original_title_label"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/original_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginSize"
            android:textColor="@color/colorSecondaryText"
            tools:text="Alien: Covenant" />

        <TextView
            android:id="@+id/overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginTopSize"
            android:text="@string/overview_label"
            android:textColor="@color/colorPrimaryText" />

        <ProgressBar
            android:id="@+id/details_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="@dimen/textViewLayoutMarginSize"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryText"
            tools:text="Interesting stuff really" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginTopSize"
            android:text="@string/release_date_label"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginSize"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryText"
            tools:text="2018" />

        <TextView
            android:id="@+id/vote_average_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginTopSize"
            android:text="@string/user_rating_label"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/vote_average_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textViewLayoutMarginSize"
            android:textColor="@color/colorSecondaryText"
            tools:text="9.0/10" />
    </LinearLayout>
</ScrollView>